# it-helpdesk-system

./: .env  AGENT_WORKFLOW_TEST_CASES.md  API_ENDPOINT_TEST_CASES.md  DETAILED_DESIGN_DESCRIPTION.md  Dockerfile  FILE_STATUS_REPORT.md  FUTURE_SCOPE_AND_IMPROVEMENTS.md  LOGIN_TESTING_GUIDE.md  NEGATIVE_TEST_CASES.md  POSITIVE_TEST_CASES.md  QUICK_START.md  QUICK_TEST_COMMANDS.md  README.md  SETUP_GUIDE.md  SYSTEM_ARCHITECTURE_DIAGRAM.md  TESTING_GUIDE.md  WHERE_TO_LOGIN.md  docker-compose.yml  helpdesk.db  login_test.html  migrate_db.py  pyproject.toml  requirements.txt  run_tests.sh  setup.sh  setup_knowledge_base.py  start_services.sh  start_with_login.sh  stop_services.sh  test_auth.sh  test_everything.sh  test_support_login.sh  test_system.sh  test_user_login.sh
app/: main.py
app/agents/: accounting_agent.py  classifier_agent.py  hr_agent.py  it_support_agent.py  workflow.py
app/models/: database.py
app/services/: auth_service.py  llm_service.py  ticket_service.py  vector_service.py  web_search.py
app/ui/: chat_interface.py  dashboard.py  login_chat_interface.py  login_dashboard.py
app/utils/: config.py  logger.py
chroma_db/: chroma.sqlite3
tests/: test_agents.py  test_api.py  test_auth.py
